<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/partingColor"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">


        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/media_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/thumbnail_iv"/>
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/full_description_tv"
        android:fontFamily="sans-serif"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:padding="@dimen/ccommon_padding"
        android:maxLines = "10"
        android:scrollbars = "vertical"/>

</LinearLayout>