<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="@color/partingColor">

<android.support.v7.widget.RecyclerView
    android:id="@+id/menu_rv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:layout_centerInParent="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_internet"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:id="@+id/no_internet_tv"/>
</RelativeLayout>